EBER/simple-motor/simple-motor.sdk/.metadata/.plugins/org.eclipse.cdt.ui/mastcam_mvmt.build.log
22:18:17 **** Auto Build of configuration Debug for project mastcam_mvmt ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/MastcamControl.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/MastcamControl.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../mastcam_mvmt_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/MastcamControl.d" -MT"src/MastcamControl.o" -o "src/MastcamControl.o" "../src/MastcamControl.c"
../src/MastcamControl.c: In function 'main':
../src/MastcamControl.c:191:16: error: incompatible types when assigning to type 'Mastcam_State * {aka struct Mastcam_State *}' from type 'Mastcam_State {aka struct Mastcam_State}'
       CurState = Head;
                ^
../src/MastcamControl.c:193:27: error: 'Mastcam_State {aka struct Mastcam_State}' has no member named 'next'
        CurState = CurState->next;
                           ^~
make: *** [src/MastcamControl.o] Error 1

22:18:19 Build Finished (took 1s.551ms)

